deploy/burst/burst.yaml
##################################################################################################
# Details service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: burst
  labels:
    app: burst
    service: burst
spec:
  ports:
  - port: 8080 
    name: http
  selector:
    app: burst
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: burst
  labels:
    app: burst
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: burst
      version: v1
  template:
    metadata:
      labels:
        app: burst
        version: v1
    spec:
      serviceAccountName: burst
      containers:
      - name: burst
        image: localhost:5000/burst:local
        imagePullPolicy: Always
        ports:
        - containerPort: 8080 
        securityContext:
          runAsUser: 1000
